--- a/index.css
+++ b/index.css
@@ -134,8 +134,7 @@ main {
     transition: transform 0.2s, box-shadow 0.2s ease; /* Smooth scale transition */
 }
 
-.color-picker:hover,
-.color-picker:focus {
+.color-picker:hover {
     transform: scale(1.05);
     box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
@@ -155,8 +154,7 @@ select {
     margin: 0 5px;
 }
 
-select:hover,
-select:focus {
+select:hover {
     transform: scale(1.05);
     box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
@@ -177,8 +175,7 @@ select:focus {
     text-overflow: ellipsis;
 }
 
-.get-scheme-btn:hover,
-.get-scheme-btn:focus  {
+.get-scheme-btn:hover {
     transform: scale(1.05);
     box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
@@ -253,6 +250,7 @@ select:focus {
     transition: opacity 0.7s ease;
     white-space: wrap;
     z-index: 2;
+    text-align: center;
 }
 
 .color-block:hover .hover-text,
