--- a/index.css
+++ b/index.css
@@ -244,7 +244,9 @@ select:hover {
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    top: 40%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(255, 255, 255, 0.5);
     padding: 5px 10px;
     transition: opacity 0.7s ease;
